<resources>
    <string name="app_name">Codex Gamer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_detail">Detail</string>

    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="ov_genre">Genre: </string>
    <string name="ov_release_date">Release Date: </string>
    <string name="ov_rating">Rating: </string>
    <string name="ov_platform">Platform: </string>
    <string name="ov_store">Store: </string>
    <string name="sample_genre">Action</string>
    <string name="sample_release_date">2013-09-17</string>
    <string name="sample_rating">4.48</string>
    <string name="sample_platform">PC, Xbox Series X, PlayStation 5, PlayStation 4, PlayStation 3, Xbox One, Xbox 360</string>
    <string name="sample_store">Xbox 360 Store, Nintendo Store, Steam, PlayStation Store</string>
    <string name="overview">Overview</string>
    <string name="system_requirements">System Requirements (PC)</string>
    <string name="sys_minimum_requirements">Minimum Requirements</string>
    <string name="sample_minimum_sys">Minimum:OS: Windows 10 64 Bit, Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1, Windows Vista 64 Bit Service Pack 2* (*NVIDIA video card recommended if running Vista OS)Processor: Intel Core 2 Quad CPU Q6600 @ 2.40GHz (4 CPUs) / AMD Phenom 9850 Quad-Core Processor (4 CPUs) @ 2.5GHzMemory: 4 GB RAMGraphics: NVIDIA 9800 GT 1GB / AMD HD 4870 1GB (DX 10, 10.1, 11)Storage: 72 GB available spaceSound Card: 100% DirectX 10 compatibleAdditional Notes: Over time downloadable content and programming changes will change the system requirements for this game. Please refer to your hardware manufacturer and www.rockstargames.com/support for current compatibility information. Some system components such as mobile chipsets, integrated, and AGP graphics cards may be incompatible. Unlisted specifications may not be supported by publisher. Other requirements: Installation and online play requires log-in to Rockstar Games Social Club (13+) network; internet connection required for activation, online play, and periodic entitlement verification; software installations required including Rockstar Games Social Club platform, DirectX , Chromium, and Microsoft Visual C++ 2008 sp1 Redistributable Package, and authentication software that recognizes certain hardware attributes for entitlement, digital rights management, system, and other support purposes. SINGLE USE SERIAL CODE REGISTRATION VIA INTERNET REQUIRED; REGISTRATION IS LIMITED TO ONE ROCKSTAR GAMES SOCIAL CLUB ACCOUNT (13+) PER SERIAL CODE; ONLY ONE PC LOG-IN ALLOWED PER SOCIAL CLUB ACCOUNT AT ANY TIME; SERIAL CODE(S) ARE NON-TRANSFERABLE ONCE USED; SOCIAL CLUB ACCOUNTS ARE NON-TRANSFERABLE. Partner Requirements: Please check the terms of service of this site before purchasing this software.</string>
    <string name="sample_recomended_sys">Recommended:OS: Windows 10 64 Bit, Windows 8.1 64 Bit, Windows 8 64 Bit, Windows 7 64 Bit Service Pack 1Processor: Intel Core i5 3470 @ 3.2GHz (4 CPUs) / AMD X8 FX-8350 @ 4GHz (8 CPUs)Memory: 8 GB RAMGraphics: NVIDIA GTX 660 2GB / AMD HD 7870 2GBStorage: 72 GB available spaceSound Card: 100% DirectX 10 compatibleAdditional Notes:</string>
    <string name="sys_recomended_requirements">Recommended Requirement</string>
    <string name="msg_error">Oops.. something went wrong</string>
    <string name="msg_empty">Empty data</string>
</resources>