<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.amary.codexgamer.home.HomeFragment"
        android:label="@string/app_name"
        app:moduleName="home">
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.amary.codexgamer.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        app:moduleName="favorite">
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.amary.codexgamer.settings.SettingsFragment"
        android:label="@string/menu_settings"
        app:moduleName="settings"/>
</navigation>