<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.util.ArrayList" />

        <variable
            name="detailGames"
            type="com.amary.codexgamer.core.domain.model.Games" />

        <variable
            name="genreGames"
            type="String" />

        <variable
            name="platformGames"
            type="String" />

        <variable
            name="storeGames"
            type="String" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:context=".ui.detail.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_web_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <WebView
                    android:id="@+id/wb_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_screenshot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_web_view" />

            <TextView
                android:id="@+id/info_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_screenshot" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_overview">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/info_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ov_genre"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{genreGames}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/info_genre"
                        app:layout_constraintTop_toTopOf="@+id/info_genre" />

                    <TextView
                        android:id="@+id/info_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ov_release_date"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{detailGames.released}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/info_release_date"
                        app:layout_constraintTop_toTopOf="@+id/info_release_date" />

                    <TextView
                        android:id="@+id/info_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ov_rating"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{String.valueOf(detailGames.rating)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/info_rating"
                        app:layout_constraintTop_toTopOf="@+id/info_rating" />

                    <TextView
                        android:id="@+id/info_platform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ov_platform"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

                    <TextView
                        android:id="@+id/tv_platform"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{platformGames}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/info_platform"
                        app:layout_constraintTop_toTopOf="@+id/info_platform" />

                    <TextView
                        android:id="@+id/info_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ov_store"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_platform" />

                    <TextView
                        android:id="@+id/tv_store"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{storeGames}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/info_store"
                        app:layout_constraintTop_toTopOf="@+id/info_store" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_menu_favorite"
                android:tint="@color/colorBackground"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/info_overview"
                app:layout_constraintEnd_toEndOf="@+id/cv_overview"
                app:layout_constraintTop_toBottomOf="@+id/info_overview" />

            <TextView
                android:id="@+id/info_system_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/system_requirements"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_overview" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_system_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_system_requirement">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/info_minimum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sys_minimum_requirements"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_minimum_requirement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/info_minimum"
                        app:layout_constraintTop_toBottomOf="@+id/info_minimum" />

                    <TextView
                        android:id="@+id/info_recomended"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/sys_recommended_requirements"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_minimum_requirement" />

                    <TextView
                        android:id="@+id/tv_recomended_requirement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_recomended" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>